# mockdata2

./: .gitignore  Cargo.toml  Codigos_Nacionais.csv
src/: bulario.rs  common.rs  constants.rs  consultation.rs  geography.rs  health_plan.rs  hospital.rs  main.rs  medicine.rs  patient.rs  sql_generator.rs
src/tables/: consultation.rs  geography.rs  health_plan.rs  hospital.rs  medicine.rs  mod.rs  patient.rs
