[package]
name = "mockdata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
rand = "0.8.5"
rayon = "1.8.0"
fake = { version = "2.9.1", features = ["derive", "chrono"] }
reqwest = "0.11.22"
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1.0.107"
chrono = { version = "0.4.31", features = ["serde"] }
anyhow = "1.0.75"
futures = "0.3.28"
indicatif = "0.17.7"
